# blockeditor

./: .gitignore  BaseItem.h  BlockDelegateLayout.qml  BlockDelegate_Block.qml  BlockDelegate_Document.qml  BlockDelegate_Draw.qml  BlockDelegate_Footer.qml  BlockDelegate_Header.qml  BlockDelegate_Heat.qml  BlockDelegate_Unknown.qml  BlockDelegate_Upset.qml  BlockModel.cpp  BlockModel.h  BlockRow.qml  BlocksListView.qml  CMakeLists.txt  CardsListView.qml  ContactModel.qml  IconsLeftPane.qml  Main.qml  OperationModel.cpp  OperationModel.h  README.md  SelectionController.qml  billetselectormodel.cpp  billetselectormodel.h  blockitem.h  blocks.h  blockslistmodel.cpp  blockslistmodel.h  blockslistmodel_pointers.cpp  dieselectormodel.cpp  dieselectormodel.h  generated_operations.cpp  main.cpp  visualcards.h  visualcardsmodel.cpp  visualcardsmodel.h
card_delegates/: Card_BaseLayout.qml  Card_Block.qml  Card_Document.qml  Card_Draw.qml  Card_Footer.qml  Card_Header.qml  Card_Heat.qml  Card_Unknown.qml  Card_Upset.qml
